# randrem

./: Cargo.toml  LICENSE  README.md  call.sh  example.json  randrem.sh
cli/: example.json
randrem/: Cargo.toml
randrem/src/: main.rs
src/: main.rs
tg/: pyproject.toml
