[package]
name = "randrem"
version = "1.0.0"
edition = "2021"
description = "sending random remainders to be more healthy"
homepage = "https://github.com/lquenti/randrem"
repository = "https://github.com/lquenti/randrem"
license = "MIT"
authors = ["Lars Quentin <lars@lquenti.de>"]
readme = "./README.md"

[dependencies]
anyhow = "1"
human-panic = "1.1"
notify-rust = "4"
rand = "0.8"

